tests/baselines/reference/recursiveBaseCheck6.errors.txt
tests/cases/compiler/recursiveBaseCheck6.ts(1,7): error TS2506: 'S18' is referenced directly or indirectly in its own base expression.
tests/cases/compiler/recursiveBaseCheck6.ts(2,13): error TS2339: Property 'blah' does not exist on type 'S18<unknown>'.


==== tests/cases/compiler/recursiveBaseCheck6.ts (2 errors) ====
    class S18<A> extends S18<{ S19: A; }>{ }
          ~~~
!!! error TS2506: 'S18' is referenced directly or indirectly in its own base expression.
    (new S18()).blah;
                ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'S18<unknown>'.